# vstu_schedule

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  pyproject.toml  ruff.toml
apps/: __init__.py
apps/client/: views.py
apps/client/services/: client_helpers.py  logic.py
apps/client/static/js/: headerScripts.js  tableScripts.js
apps/client/tests/: __init__.py  test_logic.py
apps/common/: admin.py  apps.py  models.py  selectors.py  signals.py
apps/common/migrations/: 0001_initial.py  0002_alter_department_name.py
apps/common/services/: importers.py  utilities.py  utility_filters.py
apps/common/services/timetable/admin/: about.txt
apps/common/services/timetable/export/: exporter.py
apps/common/services/timetable/load/: event_importer.py  event_importer_legacy.py  (+1 more)
apps/common/tests/: __init__.py  test_import.py  test_readapi.py  test_reference_import.py  test_utilities.py  test_utility_filters.py  test_vstu_event_import.py  test_writeapi.py
apps/common/tests/data/: test_import_1.json
docs/: developers.md
static/styles/: style.css
templates/client/: calendarTable.html  header.html  index.html  table.html
templates/panel/admin/: abstractDayChangeListExtend.html  abstractEventChangeListExtend.html  departmentChangeListExtend.html  eventParticipantChangeListExtend.html  eventPlaceChangeListExtend.html  organizationChangeListExtend.html  scheduleChangeListExtend.html  subjectChangeListExtend.html  timeSlotChangeListExtend.html
templates/timetable/: emptyTable.html  footer.html  header.html  index.html  table.html  welcome.html
templates/timetable/admin/: abstractEventChangeListExtend.html  departmentChangeListExtend.html  organizationChangeListExtend.html
vstu_schedule/: settings.py  urls.py
(+8 files in other folders)
