[project]
name = "vstu-schedule"
version = "0.0.1-alpha"
description = "Unified VSTU Schedule project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.2",
    "django>=6.0.1",
    "django-celery-beat>=2.9.0",
    "gunicorn>=23.0.0",
    "psycopg[binary,pool]>=3.3.2",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
    "ruff>=0.15.2",
]
