[project]
name = "vstu-schedule"
version = "0.1.0-alpha"
description = "Unified VSTU Schedule project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.3",
    "django>=6.0.3",
    "django-celery-beat>=2.9.0",
    "gunicorn>=23.0.0",
    "psycopg>=3.3.2",
    "psycopg[binary,pool]>=3.3.0",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "vstu-xls",
    "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
    "ruff>=0.15.8",
]

[tool.uv.sources]
vstu-xls = { git = "https://github.com/den1s0v/vstu_xls.git", rev = "0.2.0-preview" }
